Atualizar URL da homepage no package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "pitouemat.github.io/app-spotify",
+  "homepage": "https://pitouemat.github.io/app-spotify",
   "name": "newgroovit",
   "private": true,
   "version": "0.0.0",
